Port to 1.20.5 dev. progress